--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,17 @@
     --cell-size: 30px;
 }
 
+.game {
+    padding: 1rem;
+}
+
+.board-container {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+
+}
+
 .board {
     border: 1px solid black;
     width: fit-content;
@@ -32,18 +43,17 @@
     flex-direction: column;
 }
 
-div.ship .cell {
+.ships-container .cell {
     background-color: black;
     border: 1px solid white;
-
 }
 
-div.ship {
+.ships-container .ship {
     display: flex;
     width: fit-content;
 }
 
-div.ship.selected {
+.ships-container .ship.selected {
     border: 2px solid #00ff00;
     transform: scale(1.05);
 }
