--- a/src/style.css
+++ b/src/style.css
@@ -60,6 +60,12 @@
     background-color: grey;
 }
 
+.ships-container.vertical {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
 .ships-container.vertical div.ship {
     flex-direction: column;
 }
