--- a/src/style.css
+++ b/src/style.css
@@ -210,3 +210,21 @@ button:active {
     0% { opacity: 0; }
     100% { opacity: 1; }
 }
+
+/* Winner Animation */
+.board.winner {
+    border: 5px solid #4CAF50;
+    border-radius: 15px;
+    box-shadow: 0 0 30px 10px #73da76a8;
+}
+
+
+/* Loser Animation */
+.board.loser {
+    border: 5px solid #ff4444;
+    border-radius: 15px;
+    filter: brightness(80%);
+    box-shadow: 0 0 30px 10px #ee5353a8;
+
+}
+
